chore: add get balance of token_id in erc404
