# openapi/openapi-proto/swagger/sagi-openapi.swagger.yaml
@@ -330,6 +330,10 @@ paths:
           in: query
           required: false
           type: string
+        - name: token_id
+          in: query
+          required: false
+          type: string
       tags:
         - ERC404
   /api/erc404/balanceOfBatch:
